force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>It is used to get Appointment Details of Hospital</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>