force-app/main/default/objects/Appointment__c/fields/Appointment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Duration__c</fullName>
    <description>It is used to get Appointment Duration of Patient</description>
    <label>Appointment Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>