force-app/main/default/objects/Appointment__c/fields/Appointment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Fee__c</fullName>
    <description>It is for Appointment Fees</description>
    <label>Appointment Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>