force-app/main/default/objects/Appointment__c/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <description>It is used to find the location of branch</description>
    <label>Appointment Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>