force-app/main/default/objects/Appointment__c/fields/Appointment_Source__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Source__c</fullName>
    <description>It is used to how Hospital get the opportunity</description>
    <label>Appointment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>