force-app/main/default/objects/Appointment__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>It is used to give Explanation for cancellation</description>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>