force-app/main/default/objects/Appointment__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>It is Date of when you need follow up</description>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>