force-app/main/default/objects/Appointment__c/fields/Follow_up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to find the patient need future appointment needed or not</description>
    <label>Follow-up Required</label>
    <type>Checkbox</type>
</CustomField>