force-app/main/default/objects/Appointment__c/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <description>It is used to find the follow up status</description>
    <formula>AND(Follow_up_Date__c &lt; TODAY(),
 NOT(OR(ISPICKVAL( Appointment_Status__c , &quot;Completed&quot;) ,ISPICKVAL( Appointment_Status__c , &quot;Cancelled&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow-Up Status</label>
    <type>Checkbox</type>
</CustomField>