force-app/main/default/objects/Appointment__c/fields/Insurance_Covered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Covered_Amount__c</fullName>
    <description>It is used to find the coverage amount of Insurance</description>
    <formula>( Patient__r.Insurance_Coverage__c ) *  Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Covered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>