force-app/main/default/objects/Appointment__c/fields/Is_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to check, whether it is emergency or not</description>
    <label>Is Emergency</label>
    <type>Checkbox</type>
</CustomField>