force-app/main/default/objects/Appointment__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <formula>IF( AND( Is_Emergency__c ,ISPICKVAL( Appointment_Status__c , &quot;Scheduled&quot;) ) , &quot;High Priority&quot;, &quot;Low Priority&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Level</label>
    <type>Text</type>
</CustomField>