force-app/main/default/objects/Appointment__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remainder of Future appointment needed or not</description>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>