force-app/main/default/objects/Appointment__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>It is Symptoms of patient feels</description>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fever</fullName>
            </value>
            <value>
                <fullName>Cough</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>