force-app/main/default/objects/Appointment__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>It is used to Calculate total amount using tax + fee</description>
    <formula>Appointment_Fee__c  + ( Appointment_Fee__c * (Tax__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>