force-app/main/default/objects/Appointment__c/fields/Ward_Type__c.field-meta.xml
<CustomField>
    <fullName>Ward_Type__c</fullName>
    <description>It is used to find the Ward Type of patient</description>
    <label>Ward Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Visit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Ward</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Private Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>