force-app/main/default/objects/Appointment__c/recordTypes/Emergency_Case.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Case</fullName>
    <active>true</active>
    <description>is used to enter Emergency Case details</description>
    <label>Emergency Case</label>
</RecordType>