force-app/main/default/objects/Appointment__c/recordTypes/Inpatient.recordType-meta.xml
<RecordType>
    <fullName>Inpatient</fullName>
    <active>true</active>
    <description>defines that patient admitted</description>
    <label>Inpatient</label>
</RecordType>