force-app/main/default/objects/Appointment__c/recordTypes/Outpatient.recordType-meta.xml
<RecordType>
    <fullName>Outpatient</fullName>
    <active>true</active>
    <description>defines that patient visiting for consultation</description>
    <label>Outpatient</label>
</RecordType>