force-app/main/default/objects/Appointment__c/listViews/Recent_Emergency_Appointments.listView-meta.xml
<ListView>
    <fullName>Recent_Emergency_Appointments</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Appointment__c.Emergency_Case</value>
    </filters>
    <filters>
        <field>Is_Emergency__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Recent Emergency Appointments</label>
</ListView>